crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__credentials__tests__error_message_snapshots__error_msg_malformed_toml.snap
---
source: crates/shipper/src/ops/auth/credentials.rs
expression: err.root_cause().to_string()
---
TOML parse error at line 1, column 6
  |
1 | this is [[[not valid toml
  |      ^
key with no value, expected `=`
